quicklog/tests/failures/trailing_comma.stderr
error: trailing comma not accepted
 --> tests/failures/trailing_comma.rs:4:27
  |
4 |     info!("trailing comma",);
  |                           ^
